--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -8,6 +8,6 @@
     }
   },
   "DbContextSettings" :{
-    "ConnectionString" : "User ID=docker;Host=postgres;Port=5432;Database=docker;Pooling=true;"
+    "ConnectionString" : "User ID=postgres;Host=postgres;Server =192.168.1.6; Port=5432;Database=postgres;Pooling=true;"
   }
 }
